--- a/css/creative.css
+++ b/css/creative.css
@@ -7,6 +7,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  margin-top: 0;
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
@@ -45,6 +46,7 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  margin-top: 0;
 }
 .whitee {
       background-color: rgb(300, 300, 300);
